--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "antd": "^4.8.6",
     "gh-pages": "^3.1.0",
     "prettier": "2.0.5",
     "tailwindcss": "^1.6.2"
@@ -61,6 +62,6 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests!\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master -r https://$GH_TOKEN@github.com/SkyChang/skychang.github.io.git"
+    "deploy": "gatsby build && gh-pages -d public -b master -r https://$GH_TOKEN@github.com/TsangKalung/TsangKalung.github.io.git"
   }
 }
