--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,12 @@ name: Blog CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   BuildAndDeploy:
-    
     runs-on: ubuntu-latest
 
     steps:
@@ -24,4 +23,4 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          npm run deploy
+          npm run deploy && echo 'zengjialong.com' > CNAME
